# ndrs

./: .gitignore  Cargo.toml  README.md  README_zh.md  build.rs  build.rs.bak  pyproject.toml
examples/: custom_type.rs
github/workflows/: publish.yml
kernel/include/: kernel_interface.h
kernel/src/cpu/: ops.cpp
kernel/src/cuda/: ops.cu
ndrs/: Cargo.toml  README.md  README_zh.md  build.rs
ndrs-python/: Cargo.toml
ndrs-python/ndrs/: __init__.py  creation.py  dtype.py  register.py  tensor.py  view.py
ndrs-python/ndrs/cuda/: __init__.py  elementwsie_kernel.py  raw_kernel.py
ndrs-python/src/: conversion.rs  device.rs  indexing.rs  lib.rs  ops.rs  register.rs  tensor.rs  utils.rs  view.rs
ndrs-python/src/cuda/: device.rs  elementwise_kernel.rs  event.rs  mod.rs  raw_kernel.rs  stream.rs
ndrs/kernel/include/: kernel_interface.h
ndrs/kernel/src/cpu/: ops.cpp
ndrs/kernel/src/cuda/: ops.cu
ndrs/src/: device.rs  dtype.rs  kernel.rs  lib.rs  macros.rs  stream.rs  tensor.rs  view.rs
ndrs/src/backend/: mod.rs
ndrs/src/backend/cpu/: device.rs  event.rs  mod.rs  stream.rs
ndrs/src/backend/cuda/: device.rs  elementwise_kernel.rs  event.rs  mod.rs  raw_kernel.rs  stream.rs  tensor_arg.rs  view_arg.rs
ndrs/src/builtin_kernels/: mod.rs
ndrs/src/builtin_kernels/cpu/: elementwise.rs  fill.rs
ndrs/src/builtin_kernels/cuda/: elementwise.rs  fill.rs  mod.rs
ndrs/src/cuda/: raw_kernel.rs
ndrs/src/tensor/: access.rs  construction.rs  conversion.rs  data.rs  handle.rs  handle_ops.rs  io.rs  mod.rs  parser.rs
ndrs/src/tensor/handle_ops/: conversion.rs  creation.rs  mod.rs
ndrs/src/view/: broadcast.rs  mod.rs  slice.rs  trait_def.rs  views.rs
ndrs/src/view_ops/: binary.rs  copy.rs  creation.rs  device_transfer.rs  fill.rs  matmul.rs  mod.rs  shape.rs
ndrs_macros/: Cargo.toml
ndrs_macros/src/: lib.rs
python/: Cargo.toml  build.rs
python/ndrs/: __init__.py
tests/: test_basic.py  test_cuda.py  test_custom.py  test_custom_add.py  test_dtype.py  test_elementwise_kernel.py
