[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ndrs"
version = "0.1.0"
description = "A Rust-based tensor library with CPU/CUDA support"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"

[tool.maturin]
python-source = "python"
manifest-path = "python/Cargo.toml"
module-name = "ndrs._ndrs"
features = ["pyo3/extension-module"]
include = ["python/ndrs/libndrs_kernel.so"]

[package.metadata.maturin]
include = [
    "ndrs/_ndrs.so",
    "ndrs/libndrs_kernel.so"
]
