[build-system]
build-backend = "maturin"
requires = ["maturin>=1.0,<2.0"]

[project]
authors = [{name = "anchor", email = "you@example.com"}]
description = "A Rust-based tensor library with CPU/CUDA support"
license = {text = "MIT"}
name = "ndrs"
readme = "README.md"
requires-python = ">=3.8"
version = "0.5.0"

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "ndrs-python/Cargo.toml"
module-name = "ndrs._ndrs"
python-source = "ndrs-python"

[package.metadata.maturin]
include = ["ndrs/_ndrs.so"]
