[package]
name = "ndrs"
version = "0.3.0"
edition = "2021"
description = "A tensor library with GPU support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akkaze/ndrs"
homepage = "https://github.com/akkaze/ndrs"
documentation = "https://docs.rs/ndrs"

[dependencies]
cudarc = { version = "0.19.4", features = ["cuda-12000", "std"] }
once_cell = "1.19"
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
npyz = "0.9"
tempfile = "3"
threadpool = "1.8"
num_cpus = "1.16"
env_logger = "0.11"
log = "0.4"
ctor = "0.2"

[build-dependencies]
walkdir = "2"
cc = "1.0"
cudaforge = "0.1"   # 用于编译 CUDA 代码

[features]
default = ["cuda"]
cuda = []