[package]
description = "A tensor library with GPU support"
documentation = "https://docs.rs/ndrs"
edition = "2024"
homepage = "https://github.com/akkaze/ndrs"
license = "MIT OR Apache-2.0"
name = "ndrs"
repository = "https://github.com/akkaze/ndrs"
version = "0.5.0"

[dependencies]
bytemuck = {version = "1.14", features = ["derive"]}
ctor = "0.2"
cudarc = {version = "0.19.4", features = ["cuda-12000", "std"]}
env_logger = "0.11"
log = "0.4"
npyz = "0.9"
num_cpus = "1.16"
once_cell = "1.19"
parking_lot = {version = "0.12", features = ["deadlock_detection"]}
tempfile = "3"
anyhow = "1.0"
regex = "1.12.3"
thiserror = "1.0"
threadpool = "1.8"

[build-dependencies]
cc = "1.0"
cudaforge = "0.1"
find_cuda_helper = "0.2.0"
vcvars = "0.1.6"
walkdir = "2"

[features]
cuda = []
default = ["cuda"]
