[package]
name = "ndrs_macros"
version = "0.2.0"
edition = "2021"
description = "Proc macros for ndrs tensor library"
license = "MIT OR Apache-2.0"
repository = "https://github.com/akkaze/ndrs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"